# llm-chat-client

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  chat_client.py  docker-compose.yml  entrypoint.sh  exmaple.py  llm_models.py  main.py  message.py  message_list.py  models.py  pyproject.toml  pytest.ini  vercel.json
.github/workflows/: deploy-dev.yml  deploy-main.yml
alembic/: env.py
alembic/versions/: c616424fda8c_.py  e2fe0b442080_keyword_site_composite_key.py
app/: main.py  worker_main.py
app/src/Infrastructure/crawling/: base_crawler.py  proxy_manager.py
app/src/Infrastructure/mail/: mail_manager.py
app/src/clients/: chat_client.py
app/src/core/: config.py  database.py  dependencies.py
app/src/core/dependencies/: auth.py
app/src/core/exceptions/: auth_excptions.py  client_exceptions.py
app/src/db/: database.py
app/src/domain/hotdeal/: models.py  repositories.py  schemas.py  services.py  utils.py
app/src/domain/mail/: models.py
app/src/domain/user/: models.py  repositories.py  repository.py  schemas.py  services.py
app/src/llm/: __init__.py  base.py  gemini.py  grok.py  llm_models.py
app/src/models/: message_list.py
src/models/: message_list.py
static/: chat.html  header.html  home.html  hotdeal.html  index.html  login.css  login.html  login.js  script.js  signup.css  signup.html  signup.js  style.css
static/js/: auth.js  auth_utils.js  config.js  keyword_manager.js
tests/: conftest.py
tests/core/: test_dependencies.py
tests/core/dependencies/: test_auth.py
tests/db/: test_database.py
tests/domain/hotdeal/: test_hotdeal_service.py
tests/domain/user/: test_repository.py  test_user_service.py
tests/domain/user/v1/: test_router.py  (+1 more)
tests/worker/: test_worker_main.py
(+3 files in other folders)
