[project]
name = "grok-crobat"
version = "0.1.0"
description = ""
authors = [
    {name = "sharknia",email = "furychick0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "openai (>=1.67.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
